log
Fri 17 Mar 2023 05:43:48 PM UTC: 
 exercises.c | 27 +++++++++++++++++++++++----
 1 file changed, 23 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
01cf253
Fri 17 Mar 2023 05:46:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
326d30b
Fri 17 Mar 2023 05:49:37 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
2d64fbc
Fri 17 Mar 2023 05:54:30 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:96:5: error: ‘Vector’ has no member named ‘pos’
   96 |   v -> pos[i] = valor;
      |     ^~
Compilation failed
06b6b68
Fri 17 Mar 2023 05:55:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
9748f1d
Fri 17 Mar 2023 05:59:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
8d3e22d
Fri 17 Mar 2023 06:02:38 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|3
total_score: 40/70
7a865f1
Fri 17 Mar 2023 06:06:48 PM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 50/70
129da7e
Fri 17 Mar 2023 06:19:47 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:87:29: error: expected expression before ‘)’ token
   87 |   Vector *vector = (vector *) malloc(sizeof(vector));
      |                             ^
exercises.c:91:11: error: returning ‘int’ from a function with return type ‘Vector *’ makes pointer from integer without a cast [-Werror=int-conversion]
   91 |    return n;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
1bef4db
Fri 17 Mar 2023 06:19:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:87:29: error: expected expression before ‘)’ token
   87 |   Vector *vector = (vector *) malloc(sizeof(vector));
      |                             ^
Compilation failed
d82eaa8
Fri 17 Mar 2023 06:21:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:88:10: error: array subscript ‘Vector[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   88 |   vector -> datos = (int *)calloc(n, sizeof(int));
      |          ^~
exercises.c:87:32: note: referencing an object of size 8 allocated by ‘malloc’
   87 |   Vector *vector = ((Vector *) malloc(sizeof(vector)));
      |                                ^~~~~~~~~~~~~~~~~~~~~~
exercises.c:89:10: error: array subscript ‘Vector[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   89 |   vector -> capacidad = n;
      |          ^~
exercises.c:87:32: note: referencing an object of size 8 allocated by ‘malloc’
   87 |   Vector *vector = ((Vector *) malloc(sizeof(vector)));
      |                                ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a318883
Fri 17 Mar 2023 06:21:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:88:10: error: array subscript ‘Vector[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   88 |   vector -> datos = (int *)calloc(n, sizeof(int));
      |          ^~
exercises.c:87:31: note: referencing an object of size 8 allocated by ‘malloc’
   87 |   Vector *vector = (Vector *) malloc(sizeof(vector));
      |                               ^~~~~~~~~~~~~~~~~~~~~~
exercises.c:89:10: error: array subscript ‘Vector[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   89 |   vector -> capacidad = n;
      |          ^~
exercises.c:87:31: note: referencing an object of size 8 allocated by ‘malloc’
   87 |   Vector *vector = (Vector *) malloc(sizeof(vector));
      |                               ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0124b53
Fri 17 Mar 2023 06:22:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
a9244cb
Fri 17 Mar 2023 06:27:43 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  8|0
total_score: 70/70
26c7e88
